--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,9 +2,12 @@
 <% include nav %>
 <div id="root">
     <div class="section group">
-        <div class="col span_5_of_5 bighead">
+        <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
             Contact.
         </div>
+
     </div>
 </div>
+                <img src="/image/se.svg">
+
 </html>
