--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,139 +1,242 @@
 <% include head %>
 <% include nav %>
 <div id="root">
-    <div class="section group">
-        <div class="intro-bar"></div>
-        <div class="col span_4_of_5 bighead bighead-barleft">
-            Thoughtful solutions framed by design &amp; supported by expertly produced technology.
-            <!--Design-driven application development. Expertly produced technology.-->
-        </div>
+<div class="section group">
+    <div class="intro-bar"></div>
+    <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
+        Thoughtful solutions framed by design &amp; supported by expertly produced technology.
+        <!--Design-driven application development. Expertly produced technology.-->
+    </div>
+</div>
+<div class="section group">
+    <div class="col span_2_of_5">
+        <img src="/image/se.svg">
+    </div>
+    <div class="col span_3_of_5 bigbody bigpadright">
+        In our more than 25 years of business,
+        we have helped Fortune 500 companies improve productivity.
+        We engineered foundations for lucrative startups.
+        We produced white labeled developer kits for mobile applications.
+        We built tools for non-profits.
+        We hosted thousands of web sites.
+        Simply, we helped countless clients translate their vision into elegantly designed software.
+
+    </div>
+</div>
+
+
+<div class="section group padboth">
+    <div class="col span_5_of_5" style="padding:0">
+        <div class="col span_2_of_5 bighead" style="padding:0">Capabilities</div>
+        <div class="col span_3_of_5" style="margin-top:10px;border-bottom: 1px solid #333;"></div>
     </div>
 
-    <div class="section group">
-        <div class="col span_5_of_5 bighead">
-            Capabilities
-        </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Visual Design</h3>
 
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Visual Design</h3>
+        <p>Post Tool has been involved in the San Francisco design community since the early 90s.
+            We worked with greats like Michael Vanderbyl and Michael Cronan. We taught print and interaction
+            design at the California College of the Arts. We get graphic design. And whether you need
+            direction or have a well established brand, we can accomodate.</p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Software Development</h3>
 
-            <p>Maecenas sed massa quis neque eleifend euismod. Ut lorem ipsum, iaculis in facilisis ut,
-                posuere sed sapien. Cras ipsum urna, fringilla sit amet sapien vitae, mattis posuere orci.
-                Morbi quis felis vel enim feugiat condimentum. Nam non egestas diam. In quis ante massa.</p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Software Development</h3>
+        <p>We like to produce applications that can operate and maintain with a plan that is appropriate
+            to our clients. We are experts at Java, Python, Javascript, Objective C and Swift. We have
+        used all major SQL databases with various persitence layers as well as Mongo and Redis.</p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Technical Documentation</h3>
 
-            <p>Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-                sem sem mattis dolor, non venenatis enim turpis ut ligula.
-                Integer eget mauris a arcu blandit fringilla.
-                Maecenas sed massa quis neque eleifend euismod. </p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Technical Documentation</h3>
+        <p>While some of our clients come to us with requirements and wireframes in hand,
+            many do not.</p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Content Management</h3>
 
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                Maecenas tristique augue at auctor varius. Pellentesque blandit maximus erat,
-                in tristique nulla efficitur nec. Sed interdum in purus vel fringilla.
-                Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-                sem sem mattis dolor, non venenatis enim turpis ut ligula.
-                Integer eget mauris a arcu blandit fringilla.</p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Content Management</h3>
+        <p>Does your application have long term content management issues? Some of the applications
+            we develop manage terabytes of data with detailed permissions and work flow. We have developed
+            content management systems on top of frameworks in Perl, Python, Java and Javascript
+            connected to a variety SQL and NoSQL data bases.
+        </p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Integration</h3>
 
-            <p>Sed interdum in purus vel fringilla.
-                Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-                sem sem mattis dolor, non venenatis enim turpis ut ligula.
-                Integer eget mauris a arcu blandit fringilla.
-                Maecenas sed massa quis neque eleifend euismod. Ut lorem ipsum, iaculis in facilisis ut,
-                posuere sed sapien. Cras ipsum urna, fringilla sit amet sapien vitae, mattis posuere orci.
-            </p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Integration</h3>
-
-            <p>Maecenas sed massa quis neque eleifend euismod. Ut lorem ipsum, iaculis in facilisis ut,
-                posuere sed sapien. Cras ipsum urna, fringilla sit amet sapien vitae, mattis posuere orci.
-                Morbi quis felis vel enim feugiat condimentum. Nam non egestas diam. In quis ante massa.</p>
-        </div>
-
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Data Visualization</h3>
-
-            <p>Maecenas sed massa quis neque eleifend euismod. Ut lorem ipsum, iaculis in facilisis ut,
-                posuere sed sapien. Cras ipsum urna, fringilla sit amet sapien vitae, mattis posuere orci.
-                Morbi quis felis vel enim feugiat condimentum. Nam non egestas diam. In quis ante massa.</p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Interaction Design</h3>
-
-            <p>Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-                sem sem mattis dolor, non venenatis enim turpis ut ligula.
-                Integer eget mauris a arcu blandit fringilla.
-                Maecenas sed massa quis neque eleifend euismod. </p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>User Experience</h3>
-
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                Maecenas tristique augue at auctor varius. Pellentesque blandit maximus erat,
-                in tristique nulla efficitur nec. Sed interdum in purus vel fringilla.
-                Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-                sem sem mattis dolor, non venenatis enim turpis ut ligula.
-                Integer eget mauris a arcu blandit fringilla.</p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Mobile Applications</h3>
-
-            <p>Sed interdum in purus vel fringilla.
-                Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-                sem sem mattis dolor, non venenatis enim turpis ut ligula.
-                Integer eget mauris a arcu blandit fringilla.
-                Maecenas sed massa quis neque eleifend euismod. Ut lorem ipsum, iaculis in facilisis ut,
-                posuere sed sapien. Cras ipsum urna, fringilla sit amet sapien vitae, mattis posuere orci.
-            </p>
-        </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Development</h3>
-
-            <p>Maecenas sed massa quis neque eleifend euismod. Ut lorem ipsum, iaculis in facilisis ut,
-                posuere sed sapien. Cras ipsum urna, fringilla sit amet sapien vitae, mattis posuere orci.
-                Morbi quis felis vel enim feugiat condimentum. Nam non egestas diam. In quis ante massa.</p>
-        </div>
+        <p>You have data: its in Excel, or an SQL data base, on Facebook, Google spreadsheets, ... You also have
+            existing applications
+            and systems in your private network. We have experience with many platforms and ready to help provide
+            strategy and technical
+            resources to integrate and monitor disparate systems effectively.</p>
     </div>
 
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Data Visualization</h3>
 
-    <div class="section group">
-        <div class="col span_3_of_5">
-            <div class="bighead">Who We Work With</div>
-            <div class="medium">
-                Our clients are Fortune 500 companies, startups,
-                nonprofits, universities, publishers, technologists,
-                philanthropists and most importantly, our partners.
-                We value our clients on a real scale; as experts in
-                their field and therefore partners in collaboration.
-            </div>
-        </div>
-        <div class="col span_1_of_5">
-            <li>Nuance Communications</li>
-            <li>Apple Computers</li>
-            <li>Frog Design</li>
-            <li>Sparkwise</li>
-            <li>The Body Shop</li>
-            <li>Chronicle Books</li>
-            <li>California College of the Arts</li>
-        </div>
-        <div class="col span_1_of_5">
-            <li>Nuance Communications</li>
-            <li>Apple Computers</li>
-            <li>Frog Design</li>
-            <li>Sparkwise</li>
-            <li>The Body Shop</li>
-            <li>Chronicle Books</li>
-            <li>California College of the Arts</li>
-        </div>
+        <p>Does your application generate really big data? There are endless possibilities in the realm of data
+            visualization.
+            We have experience with design and development using a variety of Javascript and iOS libraries.</p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Interaction Design</h3>
+
+        <p>Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
+            sem sem mattis dolor, non venenatis enim turpis ut ligula.
+            Integer eget mauris a arcu blandit fringilla.
+            Maecenas sed massa quis neque eleifend euismod. </p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>User Experience</h3>
+
+        <p>Interdum et malesuada fames ac ante ipsum primis in faucibus.
+            Maecenas tristique augue at auctor varius. Pellentesque blandit maximus erat,
+            in tristique nulla efficitur nec. Sed interdum in purus vel fringilla.
+            Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
+            sem sem mattis dolor, non venenatis enim turpis ut ligula.</p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>Mobile Applications</h3>
+
+        <p>Mobile compatibilty is no problem, but your application might need a native iOS 7 client.
+            Whether you have and existing backend or need services to support it, we can help you
+            design, develop, test, launch, maintain and evolve the app.
+        </p>
+    </div>
+    <div class="col span_1_of_5 hspan_2">
+        <h3>System Administration</h3>
+
+        <p>We offer a variety of system admisistration services.
+            Need a cluster? No problem. Distributed architecture is within reach these days. Get in touch
+            if you want to discuss your particular circumstance.</p>
     </div>
 
 </div>
+
+
+<div class="section group padboth">
+    <div class="col span_3_of_5">
+        <div class="bighead">Who We Work With</div>
+        <div class="medium">
+            Our clients are Fortune 500 companies, startups,
+            nonprofits, universities, publishers, technologists,
+            philanthropists and most importantly, our partners.
+            We value our clients on a real scale; as experts in
+            their field and therefore partners in collaboration.
+
+
+        </div>
+        <div class="prompt"> Interested in learning more about our successful realationships with our clients?
+            <a href="#">REQUEST A CASE STUDY.</a></div>
+    </div>
+    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+        <ul>
+            <li>Nuance Communications</li>
+            <li>Apple Computers</li>
+            <li>Frog Design</li>
+            <li>Sparkwise</li>
+            <li>The Body Shop</li>
+            <li>Chronicle Books</li>
+            <li>California College of the Arts</li>
+            <li>SF MOMA</li>
+            <li>Getty Center</li>
+            <li>Charles Bloszies</li>
+            <li>Richard Johnson Design</li>
+            <li>Nokia</li>
+            <li>Mills College</li>
+        </ul>
+    </div>
+    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+        <ul>
+            <li>Yale University Press</li>
+            <li>Oracle</li>
+            <li>VMWare</li>
+            <li>Nazareli Press</li>
+            <li>Penguin Putnman Press</li>
+            <li>Todd Hido</li>
+            <li>Tabitha Soren</li>
+            <li>Kamau Patton</li>
+            <li>Southern Exposure Gallery</li>
+            <li>Hackett-Freedman</li>
+            <li>X Matters</li>
+        </ul>
+    </div>
+</div>
+
+
+<div class="section group padboth">
+    <div class="col span_2_of_5">
+        <div class="bighead">Press</div>
+        <div class="medium">
+            We distinguish ourselves
+            through our ability to link design
+            with technology, and continue
+            to set the bar for excellence
+            in our field.
+        </div>
+    </div>
+    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+        <h3>Publications</h3>
+        <ul>
+            <li>Blobjects,<br>San Jose Museum of Art</li>
+            <li>Graphic Design for the 21st Century, Phaidon</li>
+            <li>Adobe Masters Class: Web Site Redesign 2001</li>
+            <li>MovingType, Designing for Time and Space</li>
+            <li>Design Culture Now</li>
+            <li>Sonic Graphics, Seeing Sound</li>
+            <li>Radical Graphics, Chronicle Books</li>
+            <li>Type in Motion, Rizzoli</li>
+            <li>Typographics Three, Hearst Books Intl.</li>
+            <li>Cool Sites, Hearst Books Intl.</li>
+            <li>Eye Magazine &lsquo;Serious Doodling&rsquo;</li>
+            <li>IMG SRC 100</li>
+            <li>Graphic Design in America, Rockport Publishers</li>
+            <li>Communication Arts &lsquo;Post Tool design&rsquo; </li>
+            <li>Popeye Magazine-Japan &lsquo;PostTool&rsquo; </li>
+            <li>C - NetTelevision</li>
+            <li>MSNBC Television, The Site</li>
+            <li>Critique Magazine</li>
+            <li>Creative Review &lsquo;Brainshift&rsquo;</li>
+            <li>ID Magazine &lsquo;An Interpretation of Dreams&rsquo;</li>
+            <li>ID Magazine &lsquo;Electronic Youth&rsquo;</li>
+            <li>Graphis Magazine &lsquo;Multimedia by the Bay&rsquo;</li>
+            <li>The AIGA Journal &lsquo;Absolute Individuals&rsquo;</li>
+            <li>Upper &amp; lowercase Magazine &lsquo;PostTool design&rsquo;</li>
+            <li>On-line Design Magazine &lsquo;Digitizing ...&rsquo;</li>
+        </ul>
+
+    </div>
+    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+        <h3>Notable Lectures</h3>
+        <ul>
+            <li>San Jose State University</li>
+            <li>University of San Francisco Design Program</li>
+            <li>Stanford University&rsquo;s MFA Program in Design</li>
+            <li>Fabrica, Automatic Design</li>
+            <li>The Netherlands Design Institute, &lsquo;D.DADA&rsquo;</li>
+            <li>University of Hawaii &lsquo;Behavior is Form&rsquo;</li>
+            <li>Beursschouwburg, Brussels</li>
+            <li>Parsons &lsquo;Excavating the Archive&rsquo;</li>
+            <li>SFMOMA, &lsquo;Digital Masters&rsquo;</li>
+            <li>Sci Arc &lsquo;Differentiated Topographies&rsquo;</li>
+            <li>Art Center Pasadena &lsquo;Audio Interface&rsquo;</li>
+            <li>AIGA Seattle Minds On Conference</li>
+            <li>AIGA National Convention</li>
+            <li>The Creative Show, London</li>
+            <li>SVA How We learn What We learn</li>
+            <li>Minneapolis AIGA Design Camp</li>
+            <li>AIGA National Convention &lsquo;Post Tv&rsquo; </li>
+            <li>vISCOM &lsquo;Interactive Design&rsquo;</li>
+        </ul>
+
+
+    </div>
+</div>
+</div>
+
+<!--foot-->
 </html>
+
+
+
+
