--- a/views/process.ejs
+++ b/views/process.ejs
@@ -2,7 +2,7 @@
 <% include nav %>
 <div id="root">
     <div class="section group">
-        <div class="col span_5_of_5 bighead">
+        <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
             Process.
         </div>
     </div>
