--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -7,7 +7,7 @@
 .col {
     display: block;
     float: left;
-    padding: 18px 0 36px 18px;
+    padding: 18px 36px 36px 0;
     box-sizing: border-box;
 }
 
@@ -53,17 +53,18 @@
 
 .hspan_2 {
     height: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
 
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 800px) {
     .col {
         margin: 18px 0 18px 0;
     }
 }
 
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 800px) {
     .span_5_of_5 {
         width: 100%;
     }
