--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,88 +5,34 @@
 }
 
 * {
-    font-family: "Helvetica Neue Light", sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
     color: #6B6A6A;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 body {
     background-color: #FCF749;
     margin: 0;
 }
+
+
 #root {
     background-color: #EEEFEA;
-    margin: 80px 20px 20px 0;
+    margin: 80px 20px 0 0;
 
 }
-@media only screen and (min-width: 900px) {
 
-    nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 1100px;
-        height: 60px;
-        padding-top: 25px;
-        background-color: #FCF749;
-    }
-
-    nav img {
-        float: left;
-        padding: 0 100px 0 66px;
-    }
-
-    nav ul {
-        list-style-type: none;
-        margin: 25px 0 0 0;
-        padding: 0;
-        float: left;
-    }
-
-    nav li {
-        float: left;
-        width: 200px;
-    }
-
-    nav li a {
-        font-family: "Helvetica Neue Condensed Bold", sans-serif;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: #111;
-        font-size: 16px;
-        letter-spacing: 2px;
-        padding: 10px 10px 17px;
-    }
-
-    nav li a:hover {
-        color: #777;
-        background-color: #000;
-    }
-
-    nav li a.selected {
-        color: #777;
-    }
-
-    nav ul ul {
-        background-color: #111;
-        margin-top: 15px;
-        display: none;
-    }
-
-    nav ul ul li {
-        float: inherit;
-    }
-
-    nav ul ul li a {
-        color: #fff;
-        text-transform: none;
-    }
-
-    nav ul ul li a:hover {
-        background-color: #000;
-    }
+#root ul {
+    list-style-type: none;
+    margin: 25px 0 0 0;
+    padding: 0;
 }
 
+#root li {
+    font-size: 13px;
+    color: #333;
+    padding-bottom:10px;
+}
 
 h1, .bighead {
     font-size: 64px;
@@ -101,7 +47,42 @@ h1, .bighead {
     padding: 64px;
 }
 
+.bigbody {
+     font-family: "Helvetica Neue", sans-serif;
+   font-size: 23px;
+    line-height: 38px;
+    color:#444;
+}
 
+.bigpadright {
+    padding-right:215px;
+}
+
+.padboth {
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+h3, .head {
+    color: #333;
+}
+
+.medium {
+    font-size: 24px;
+    color: #333;
+    padding-top: 15px;
+}
+/* overlay */
+@media only screen and (min-width: 900px) {
+    #overlay {
+        background-color: #fff;
+        position: absolute;
+        top: 120px;
+        left: 1000px;
+        width: 400px;
+        height: 400px;
+    }
+}
 
 
 
