--- a/views/head.ejs
+++ b/views/head.ejs
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Post Tool</title>
     <link href="/css/layout.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="/css/nav.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="/js/lib/jquery-2.1.1.min.js"></script>
     <script src="/js/pt.js" type="text/javascript"></script>
