--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,11 +3,23 @@
 <div id="root">
     <div class="section group">
         <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
-            Contact.
+            We empower our clients to forge their path into the future. Join us.
         </div>
 
     </div>
 </div>
                 <img src="/image/se.svg">
+There is much more
 
+
+Our clients are Fortune 500 companies, startups, nonprofits, universities, publishers, technologists, philanthropists and most importantly, our partners.
+We value our clients on a real scale; as experts in their field and therefore partners in collaboration.
+Some of our most exciting work is not available to the general public.
+Contact us if you want to know more.
+
+Business development
+business@posttool.com
+
+Press inquiries
+press@posttool.com
 </html>
