--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 </div>
 
 
-<div class="section group padboth">
+<div class="section group padboth capabilities">
     <div class="col span_5_of_5" style="padding:0">
         <div class="col span_2_of_5 bighead" style="padding:0">Capabilities</div>
         <div class="col span_3_of_5" style="margin-top:10px;border-bottom: 1px solid #333;"></div>
@@ -42,15 +42,17 @@
     <div class="col span_1_of_5 hspan_2">
         <h3>Software Development</h3>
 
-        <p>We like to produce applications that can operate and maintain with a plan that is appropriate
-            to our clients. We are experts at Java, Python, Javascript, Objective C and Swift. We have
+        <p>We like to produce applications that can operate with a plan that is appropriate
+            to our client. We are experts at Java, Python, Javascript, Objective C and Swift. We have
         used all major SQL databases with various persitence layers as well as Mongo and Redis.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Technical Documentation</h3>
 
         <p>While some of our clients come to us with requirements and wireframes in hand,
-            many do not.</p>
+            many do not. One we get an idea of the scope of your application we can produce
+        architecture diagrams, functional requirements, wireframes, work flow diagrams,
+        entity-relationship diagrams, and more.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Content Management</h3>
@@ -81,19 +83,18 @@
     <div class="col span_1_of_5 hspan_2">
         <h3>Interaction Design</h3>
 
-        <p>Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-            sem sem mattis dolor, non venenatis enim turpis ut ligula.
-            Integer eget mauris a arcu blandit fringilla.
-            Maecenas sed massa quis neque eleifend euismod. </p>
+        <p>Need users to browse through large amounts of information or perform complex tasks? How about something
+        fun that lets users "play" or interact in unconventional ways? We have produced complex dashboard control panels
+        as well as playful entertainment related game like experiences.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>User Experience</h3>
 
-        <p>Interdum et malesuada fames ac ante ipsum primis in faucibus.
-            Maecenas tristique augue at auctor varius. Pellentesque blandit maximus erat,
-            in tristique nulla efficitur nec. Sed interdum in purus vel fringilla.
-            Proin ac rhoncus mi, sed cursus tellus. Mauris efficitur, nibh vitae pulvinar pretium,
-            sem sem mattis dolor, non venenatis enim turpis ut ligula.</p>
+        <p>Do you have an existing application and need to improve the user experience? We do that!
+        We gather user feedback and any other available data about use and experience and work with
+            you and your engineers to make a super usable experience. We are also happy as always
+            to design/build.
+        </p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Mobile Applications</h3>
@@ -107,7 +108,7 @@
         <h3>System Administration</h3>
 
         <p>We offer a variety of system admisistration services.
-            Need a cluster? No problem. Distributed architecture is within reach these days. Get in touch
+            Need a cluster? No problem. Distributed architecture is within reach. Get in touch
             if you want to discuss your particular circumstance.</p>
     </div>
 
@@ -126,7 +127,7 @@
 
 
         </div>
-        <div class="prompt"> Interested in learning more about our successful realationships with our clients?
+        <div class="prompt"> Interested in learning more about our successful realationships with our clients?<br>
             <a href="#">REQUEST A CASE STUDY.</a></div>
     </div>
     <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
@@ -141,7 +142,6 @@
             <li>SF MOMA</li>
             <li>Getty Center</li>
             <li>Charles Bloszies</li>
-            <li>Richard Johnson Design</li>
             <li>Nokia</li>
             <li>Mills College</li>
         </ul>
