--- a/views/process.ejs
+++ b/views/process.ejs
@@ -5,7 +5,38 @@
         <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
             Process.
         </div>
+        <div class="col span_5_of_5">
+           <img src="image/gantt.svg">
+        </div>
     </div>
+
+Our approach is
+iterative, concise
+and inclusive.
+Our process builds and supports the best opportunities currently available.
+Working With Us
+Our approach is iterative, concise and inclusive.
+TALK ABOUT DESIGN THINKINGIHEREl’s software development process ensures success.We partner with technology companies, teams and individuals around the world to create resource plans that are appropriate to your project. Project management is facilitated through sophisticated web and mobile based software. We also partner with select designers and design agencies to create beautiful and usable interfaces.
+Our product is transparent. All documents and code are housed in versioned repositories that we share freely with our clients. Sometimes our clients are researchers and developers who participate actively in the project.
+Post Tool classifies all software development projects into phases. A typical project progresses through each of the following phases sequentially. Often we loop through the phases continuously as needs and requirements grow in complexity. Our goal is to keep the software usable and logically consistent as it adapts to use and matures.
+
+    Request our Case Study Document
+
+
+Critical Phases
+Research
+Documentation
+Design & Development
+QA
+Evaluate & Maintain
+Proof
+Evolve & Maintain
+Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
+Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
+Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
+Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
+Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
+
 
 </div>
 </html>
