--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -3,6 +3,7 @@
 
     nav {
         position: fixed;
+        z-index: 10;
         top: 0;
         left: 0;
         width: 1100px;
@@ -13,7 +14,7 @@
 
     nav img {
         float: left;
-        padding: 0 100px 0 66px;
+        padding: 0 90px 0 66px;
     }
 
     nav ul {
@@ -25,7 +26,7 @@
 
     nav li {
         float: left;
-        width: 200px;
+        width: 205px;
     }
 
     nav li a {
