--- a/views/index.ejs
+++ b/views/index.ejs
@@ -228,8 +228,8 @@
             <li>AIGA National Convention &lsquo;Post Tv&rsquo; </li>
             <li>vISCOM &lsquo;Interactive Design&rsquo;</li>
         </ul>
-
-
+    </div>
+    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
     </div>
 </div>
 </div>
